external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_repeat_binding_2.exp
error[E03019]: invalud pattern
  ┌─ tests/move_2024/matching/invalid_repeat_binding_2.move:9:24
  │
9 │             Two::Tuple(x, x) | Two::Tuple(x, _) => { let _y = x; },
  │                        ^  - and repeated here
  │                        │   
  │                        binder 'x' is defined here
  │
  = A pattern variable must be unique unless it appears on each side of an or-pattern.

